# cloud-native-todo

./: .gitattributes  .gitignore  CLAUDE.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  test_todo_app.py
.claude/: settings.local.json
.claude/skills/backend-sdd-orchestrator/: SKILL.md
.claude/skills/database-sdd-orchestrator/: SKILL.md
.claude/skills/fastapi-backend/: SKILL.md
.claude/skills/frontend-sdd-orchestrator/: SKILL.md
.claude/skills/nextjs-frontend/: SKILL.md
.claude/skills/postgresql-database/: SKILL.md
.claude/skills/task-triage-orchestrator/: SKILL.md
.claude/skills/workflow-guardrail/: SKILL.md
.cursor/rules/: guidelines.md
.spec-kit/: config.yaml
history/prompts/general/: 1-cloud-native-todo-phase-2-analysis.general.prompt.md  2-phase1-submission.plan.prompt.md
history/prompts/phase2-todo/: 1-backend-implementation.plan.prompt.md  2-frontend-implementation.plan.prompt.md
phase-1/: README.md  pyproject.toml
phase-1/history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
phase-1/specs-history/phase-1/: CONSTITUTION.md  NOTES.md
phase-1/src/todo/: __init__.py
phase-2/: BETTER_AUTH_SETUP.md  CLAUDE.md  ERRORS-FIXED.md  HOW-TO-USE-SKILLS.md  IMPLEMENTATION-STATUS.md  QUICK-START-PROMPTS.md  README.md  SKILL-ACTIVATION-PROMPTS.md
phase-2/.specify/memory/: constitution.md
phase-2/backend/: CLAUDE.md  DATABASE_SETUP.md  ENV_SETUP.md  README.md  START_GUIDE.md  auth.py  database.py  main.py  models.py  pyproject.toml
phase-2/frontend/: .env.example  CLAUDE.md  ENV_SETUP.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
phase-2/frontend/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  images-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
phase-2/frontend/app/: globals.css  layout.tsx  page.tsx
phase-2/frontend/lib/: api.ts  auth.ts
phase-2/specs/: architecture.md  overview.md
phase-2/specs/1-frontend-bootstrap/: spec.md
phase-2/specs/10-task-history/: spec.md
phase-2/specs/11-email-notifications/: spec.md
phase-2/specs/12-task-comments/: spec.md
phase-2/specs/13-task-attachments/: spec.md
phase-2/specs/14-task-sharing/: spec.md
phase-2/specs/15-user-roles/: spec.md
phase-2/specs/2-task-list-card/: spec.md
phase-2/specs/3-task-form/: spec.md
phase-2/specs/4-due-date-recurring/: spec.md
phase-2/specs/5-task-delete/: spec.md
phase-2/specs/6-multi-language/: spec.md
phase-2/specs/7-voice-commands/: spec.md
phase-2/specs/8-user-auth/: spec.md
phase-2/specs/9-user-profile/: spec.md
phase-2/specs/api/: rest-endpoints.md
phase-2/specs/database/: schema.md
phase-2/specs/features/: authentication.md  cloud-native-blueprints.md  due-dates-reminders.md  multi-language.md  priorities-tags.md  recurring-tasks.md  reusable-intelligence.md  search-filter.md  sort-tasks.md  (+2 more)
specs/: architecture.md  overview.md  phase1-specification.md
src/: todo_app.py
(+184 files in other folders)
