[project]
name = "hackathon-todo-phase1"
version = "1.0.0"
description = "Phase I: In-Memory Python Console Todo App for Hackathon II"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Arman Saleem", email = "arman@example.com"}
]

[project.scripts]
todo-app = "src.todo_app:main"

[project.urls]
Homepage = "https://github.com/your-username/hackathon-todo-phase1"
Repository = "https://github.com/your-username/hackathon-todo-phase1"

[project.dependencies]
inquirer = "^3.1.3"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]