[project]
name = "hackathon-todo-phase1"
version = "1.0.0"
description = "Phase I: In-Memory Python Console Todo App for Hackathon II"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Arman Saleem", email = "arman@example.com"}
]
dependencies = [
    "inquirer>=3.1.3"
]

[project.scripts]
todo-app = "src.todo_app:main"

# Note: Run from phase-1 directory
# python src/todo_app.py

[project.urls]
Homepage = "https://github.com/your-username/hackathon-todo-phase1"
Repository = "https://github.com/your-username/hackathon-todo-phase1"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0"
]